--- a/myproject/myapp/templates/danh_sach_de_thi.html
+++ b/myproject/myapp/templates/danh_sach_de_thi.html
@@ -35,3 +35,5 @@
     </table>
 
     <a href="{% url 'tao_de_thi' %}">Tạo Đề Thi Mới</a>
+    <a href="{% url 'home' %}">← Quay lại trang chủ</a>
+
