--- a/myproject/myapp/templates/xem_ket_qua.html
+++ b/myproject/myapp/templates/xem_ket_qua.html
@@ -8,16 +8,20 @@
             <th>Ngày nộp</th>
             <th>Trạng thái</th>
             <th>Điểm</th>
-        </tr>
+            <th>Chi tiết bài làm</th> 
     </thead>
     <tbody>
         {% for bl in ket_qua_bai_lam %}
         <tr>
-            <td>{{ bl.0 }}</td>
+            <td>{{ bl.0 }}</td> 
             <td>{{ bl.1 }}</td>
             <td>{{ bl.2|date:"d/m/Y H:i" }}</td>
             <td>{{ bl.3 }}</td>
             <td>{{ bl.4 }}</td>
+            <td>
+                <a href="{% url 'chi_tiet_bai_lam' bl.0 %}" class="btn btn-info btn-sm">Xem chi tiết</a>
+                <a href="{% url 'xuat_bao_cao_ket_qua' bl.0 %}" class="btn btn-success btn-sm">Xuất PDF</a>
+            </td>
         </tr>
         {% endfor %}
     </tbody>
