--- a/myproject/myapp/templates/chi_tiet_bai_lam.html
+++ b/myproject/myapp/templates/chi_tiet_bai_lam.html
@@ -3,7 +3,7 @@
 <p><strong>Điểm:</strong> {{ bai_lam.diem|default:"Chưa chấm" }}</p>
 
 <h3>Hình ảnh bài thi</h3>
-<img src="/media/exam_submissions/{{ bai_lam.hinh_anh|basename }}" alt="Hình ảnh bài thi" style="max-width: 100%;">
+<img src="/media/{{ bai_lam.hinh_anh_bai_lam }}" alt="Hình ảnh bài thi" style="max-width: 100%;">
 
 <h3>Đáp án nhận diện</h3>
 <table border="1">
