--- a/myproject/myapp/templates/xem_ket_qua.html
+++ b/myproject/myapp/templates/xem_ket_qua.html
@@ -26,6 +26,7 @@
         {% endfor %}
     </tbody>
 </table>
+<a href="{% url 'home' %}">← Quay lại trang chủ</a>
 {% else %}
 <p>Bạn chưa có bài làm nào.</p>
 {% endif %}
