--- a/myproject/myapp/templates/index.html
+++ b/myproject/myapp/templates/index.html
@@ -25,6 +25,14 @@
             <li><a href="#">Hướng dẫn</a></li>
         </ul>      
     </header>
+    
+    {% if messages %}
+        <div class="messages">
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+            {% endfor %}
+        </div>
+    {% endif %}
 
     {% if role == 'teacher' %}
         <section id="teacherSection" >
