--- a/myproject/myapp/templates/index.html
+++ b/myproject/myapp/templates/index.html
@@ -40,7 +40,7 @@
             <ul>
                 <li><a href="{% url 'danh_sach_de_thi' %}"><button>Quản lý đề thi</button></a></li>
                 <li><a href="{% url 'cau_hoi_list' %}"><button>Quản lý câu hỏi</button></a></li>
-                <li><a href="{% url 'upload_exam' %}"><button>Xem kết quả học sinh</button></a></li>
+                <li><a href="{% url 'xem_ket_qua' %}"><button>Xem kết quả học sinh</button></a></li>
                 <li><a href="#"><button>Xuất báo cáo</button></a></li>
             </ul>
             <!-- <a href="{% url 'logout' %}">Đăng xuất</a> -->
